<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.pakoandrade.plannerland.registro.RegistroActivity"
    tools:showIn="@layout/activity_registro"
    android:orientation="vertical">




    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textInputLayout2">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Name"
        android:layout_gravity="center"
        android:hint="@string/nombre"
        android:textColorHint="@color/material_blue_grey_800"
        android:singleLine="true"
        android:layout_marginBottom="5dp"
        android:maxLines="1"
        android:scrollHorizontally = "true"
        android:ellipsize = "end"
        android:textColor="#000000"/>
</android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout"
        android:layout_below="@+id/textInputLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp">
    <EditText
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxLines="1"
        android:singleLine="true"
        android:scrollHorizontally = "true"
        android:ellipsize = "end"
        android:id="@+id/Email"
        android:hint="@string/email"
        android:textColorHint="@color/material_blue_grey_800"
        android:layout_marginBottom="5dp"
        android:textColor="#000000"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/textInputLayout3"
        android:layout_below="@+id/textInputLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:id="@+id/LastName"
            android:hint="@string/apellido"
            android:maxLines="1"
            android:singleLine="true"
            android:scrollHorizontally = "true"
            android:ellipsize = "end"
            android:textColorHint="@color/material_blue_grey_800"
            android:layout_marginBottom="5dp"
            android:textColor="#000000"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textInputLayout5">
        <EditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:scrollHorizontally = "true"
            android:ellipsize = "end"
            android:layout_gravity="center"
            android:id="@+id/ConfirmRpassword"
            android:hint="@string/confirmPass"
            android:textColorHint="@color/material_blue_grey_800"
            android:textColor="#000000"/>
    </android.support.design.widget.TextInputLayout>




    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout4"
        android:layout_below="@+id/textInputLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
         <EditText
             android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:layout_gravity="center"
             android:scrollHorizontally = "true"
             android:ellipsize = "end"
             android:id="@+id/Rpassword"
             android:hint="@string/password"
             android:textColorHint="@color/material_blue_grey_800"
             android:layout_marginBottom="5dp"
             android:textColor="#000000"/>
    </android.support.design.widget.TextInputLayout>



    <Spinner
        android:id="@+id/paises"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:textColor="@color/material_blue_grey_800"
        android:layout_below="@+id/textInputLayout5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <AutoCompleteTextView
        android:id="@+id/autoCompleteCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paises"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="Selecciona tu ciudad"/>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/terminos_condiciones"
        android:checked="false"
        android:layout_alignTop="@+id/etTerminos"
        android:layout_toLeftOf="@+id/etTerminos"
        android:layout_toStartOf="@+id/etTerminos"
        android:layout_below="@+id/autoCompleteCity"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etTerminos"
        android:hint="@string/terminos"
        android:textSize="25sp"
        android:textColor="#0D47A1"
        style="@style/Mystyle"
        android:layout_gravity=""
        android:textIsSelectable="false"
        android:textColorHint="#0D47A1"
        android:layout_below="@+id/autoCompleteCity"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Registrate"
        android:id="@+id/registrate"
        android:layout_gravity="bottom"
        android:background="#ffa7123f"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/etTerminos"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
